Don't use Sun proprietary API